# presentations

./: .gitignore  CAT0-1.tex  CAT0-2.tex  CAT0-3.tex  von-neumann-dimension.tm
bachelorkolloquium/: homotopiegruppen_serre.tex
bankers-queue/: BankersQueue.hs  LenList.hs  bankers-queue.tex  build.sh
bayesian-inference-in-var-and-state-space-models/: beamerthemeAmsterdam.sty  build.sh  slides.tex
cca-frank/: build.sh  frank.tex
cca-theoreme-fuer-lau/: build.sh  theoreme-fuer-lau.tex
kirchberger-type-theorems/: beamerbaseboxes.sty  folien.tex  kirchberger-typ.tex
lens/: .atom-build.json  .gitignore  build.sh  curry-feed.xml  lens.tex  stack.yaml
lens/curry-termine/: LICENSE  Main.hs  curry-termine.cabal
lens/flappy-cat/: FlappyCat.hs  LICENSE  Main.hs  flappy-cat.cabal
lens/pandoc-filter-example/: hayoo-links.hs  lens-structure.markdown  pandoc-filter-example.cabal  type-safe_routing.markdown
metr-geom-cat0/: CAT0-2.tex
metr-geom-cat0/bilder/: bildquellen.txt
operational-transformation/: .~lock.operational-transformation.odp#  mockingbird.xcf  operational-transformation.odp  quellen.txt
pizzaseminar-topostheorie/: vortrag.tex
typed-routes-in-spock/: slides.html
