name:                curry-termine
version:             0.1.0.0
synopsis:            Lens example
-- description:
-- license:
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable curry-termine
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.8 && < 5,
                       wreq,
                       text,
                       xml-lens,
                       xml-conduit
  -- hs-source-dirs:
  default-language:    Haskell2010
